--- a/app/src/main/res/drawable/diagram_background.xml
+++ b/app/src/main/res/drawable/diagram_background.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<gradient
-		android:type="radial"
-		android:startColor="#555"
-		android:endColor="#222"
-		android:gradientRadius="300dp" />
+	<solid
+		android:color="@color/primary_grayed"
+		 />
 </shape>
