--- a/app/src/main/res/layout/lapide.xml
+++ b/app/src/main/res/layout/lapide.xml
@@ -11,7 +11,7 @@
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="-20dp"
-		app:srcCompat="@mipmap/icon" />
+		app:srcCompat="@mipmap/ic_launcher" />
 
 	<TextView
 		android:id="@+id/uno"
