--- a/app/src/main/res/drawable/diagram_background.xml
+++ b/app/src/main/res/drawable/diagram_background.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<solid
-		android:color="@color/primary_grayed"
-		 />
+	<gradient
+		android:type="radial"
+		android:startColor="@color/back_element"
+		android:endColor="@color/primary_light"
+		android:gradientRadius="300dp" />
 </shape>
