--- a/app/src/main/res/layout/fragment_baur.xml
+++ b/app/src/main/res/layout/fragment_baur.xml
@@ -7,5 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view_kinship"
+        tools:listitem="@layout/list_item"/>
 </FrameLayout>
