--- a/app/src/main/res/menu/menu_principe.xml
+++ b/app/src/main/res/menu/menu_principe.xml
@@ -7,7 +7,7 @@
 	<group android:checkableBehavior="single">
 		<item
 			android:id="@+id/nav_diagramma"
-			android:icon="@drawable/menu_diagramma"
+			android:icon="@drawable/tree"
 			android:title="@string/diagram" />
 		<item
 			android:id="@+id/nav_persone"
@@ -21,32 +21,17 @@
 			app:actionLayout="@layout/menu_item_extra"/>
 		<item
 			android:id="@+id/nav_media"
-			android:icon="@drawable/menu_ritratto"
+			android:icon="@drawable/menu_media"
 			android:title="@string/media"
 			app:actionLayout="@layout/menu_item_extra"/>
 		<item
 			android:id="@+id/nav_note"
-			android:icon="@drawable/menu_nota"
+			android:icon="@drawable/menu_note"
 			android:title="@string/notes"
 			app:actionLayout="@layout/menu_item_extra"/>
 		<item android:id="@+id/nav_baur"
-			android:icon="@drawable/halo"
+			android:icon="@drawable/kinship"
 			android:title="@string/kinship"
-			app:actionLayout="@layout/menu_item_extra"/>
-		<item
-			android:id="@+id/nav_fonti"
-			android:icon="@drawable/menu_fonte"
-			android:title="@string/sources"
-			app:actionLayout="@layout/menu_item_extra"/>
-		<item
-			android:id="@+id/nav_archivi"
-			android:icon="@drawable/menu_tempio"
-			android:title="@string/repositories"
-			app:actionLayout="@layout/menu_item_extra"/>
-		<item
-			android:id="@+id/nav_autore"
-			android:icon="@drawable/menu_autore"
-			android:title="@string/submitters"
 			app:actionLayout="@layout/menu_item_extra"/>
 	</group>
 </menu>
