--- a/app/src/main/res/layout/edit_person.xml
+++ b/app/src/main/res/layout/edit_person.xml
@@ -117,7 +117,8 @@
             <EditText
                 android:id="@+id/luogo_nascita"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:autofillHints="birth_place" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.SwitchCompat
