--- a/app/src/main/res/layout/individual_event_frame.xml
+++ b/app/src/main/res/layout/individual_event_frame.xml
@@ -13,7 +13,7 @@
 		style="@style/AppTheme.LittleTitle"/>
 
 	<TextView
-		android:id="@+id/evento_testo"
+		android:id="@+id/evento_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/evento_titolo"
@@ -23,7 +23,7 @@
 		android:id="@+id/evento_altro"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/evento_testo"
+		android:layout_below="@+id/evento_text"
 		android:orientation="vertical" />
 
 	<TextView
