--- a/app/src/main/res/layout/long_title.xml
+++ b/app/src/main/res/layout/long_title.xml
@@ -11,7 +11,7 @@
 	android:paddingBottom="4dp">
 
 	<TextView
-		android:id="@+id/titolo_testo"
+		android:id="@+id/titolo_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="long title"
