--- a/app/src/main/res/layout/media.xml
+++ b/app/src/main/res/layout/media.xml
@@ -15,7 +15,7 @@
 		app:srcCompat="@drawable/image" />
 
 	<TextView
-		android:id="@+id/media_testo"
+		android:id="@+id/media_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
