--- a/app/src/main/res/layout/media_mondo.xml
+++ b/app/src/main/res/layout/media_mondo.xml
@@ -7,7 +7,7 @@
 	android:background="@drawable/icona_mondo">
 
 	<TextView
-		android:id="@+id/icona_testo"
+		android:id="@+id/icona_text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
